Skip to content

GitLab

  • Menu
Projects Groups Snippets
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • gnome-shell gnome-shell
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 1,829
    • Issues 1,829
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 135
    • Merge requests 135
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Monitor
    • Monitor
    • Incidents
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GNOME
  • gnome-shellgnome-shell
  • Issues
  • #4751

Closed
Open
Created Nov 03, 2021 by Charalampos Poulikidis@cpoul

Gnome shell 41 (Wayland) randomly freezes

Affected version

  • Fedora 35
  • Gnome 41
  • Wayland

Bug summary

Shell randomly freezes, specifically whenever I open Activities. Can trigger hotkeys (eg open a terminal) but I can't type inside the terminal. The top bar works though (power, wifi etc.

Going to a different tty and then back to tty1 logs me out, but if I login again shell is on the same freezed state. I have to do a reboot each time it happens

Steps to reproduce

It appears at random

Relevant logs, screenshots, screencasts etc.

Nov 03 13:50:37 linux-desktop gnome-shell[2973]: Window manager warning: WM_TRANSIENT_FOR window 0x1808a4b for 0x1808a52 window override-redirect is an override-redirect window and this is not correct accordin>
Nov 03 13:50:38 linux-desktop gnome-shell[2973]: JS ERROR: TypeError: app is null
                                                 _init@resource:///org/gnome/shell/ui/windowPreview.js:125:9
                                                 _addWindowClone@resource:///org/gnome/shell/ui/workspace.js:1392:21
                                                 _init@resource:///org/gnome/shell/ui/workspace.js:1130:22
                                                 _updateWorkspaces@resource:///org/gnome/shell/ui/workspacesView.js:462:29
                                                 _init@resource:///org/gnome/shell/ui/workspacesView.js:121:14
                                                 _updateWorkspacesViews@resource:///org/gnome/shell/ui/workspacesView.js:1091:24
                                                 prepareToEnterOverview@resource:///org/gnome/shell/ui/workspacesView.js:1039:14
                                                 animateToOverview@resource:///org/gnome/shell/ui/overviewControls.js:680:33
                                                 animateToOverview@resource:///org/gnome/shell/ui/overview.js:82:24
                                                 _animateVisible@resource:///org/gnome/shell/ui/overview.js:540:24
                                                 show@resource:///org/gnome/shell/ui/overview.js:525:14
                                                 toggle@resource:///org/gnome/shell/ui/overview.js:633:18
                                                 vfunc_event@resource:///org/gnome/shell/ui/panel.js:316:31
Nov 03 13:50:38 linux-desktop gnome-shell[2973]: Can't update stage views actor <unnamed>[<StBin>:0x56548c21a360] is on because it needs an allocation.
Nov 03 13:50:38 linux-desktop gnome-shell[2973]: Can't update stage views actor <unnamed>[<StBin>:0x56548ec8d830] is on because it needs an allocation.
Nov 03 13:50:38 linux-desktop gnome-shell[2973]: Can't update stage views actor <unnamed>[<StBin>:0x56548e37d140] is on because it needs an allocation.
#0  clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:62
No locals.
#1  0x00007ff3d16af6f1 in __GI___clone_internal (cl_args=cl_args@entry=0x7ffe4b873190, 
    func=func@entry=0x7ff3d162a880 <start_thread>, arg=arg@entry=0x7ff3cf169640)
    at ../sysdeps/unix/sysv/linux/clone-internal.c:54
        ret = <optimized out>
        saved_errno = 1
        flags = <optimized out>
        stack = <optimized out>
#2  0x00007ff3d162a785 in create_thread (pd=pd@entry=0x7ff3cf169640, attr=attr@entry=0x7ffe4b8734e8, 
    stopped_start=stopped_start@entry=0x7ffe4b87328e, stackaddr=stackaddr@entry=0x7ff3ce969000, 
    stacksize=<optimized out>, thread_ran=thread_ran@entry=0x7ffe4b87328f) at pthread_create.c:295
        need_setaffinity = <optimized out>
        clone_flags = 4001536
        tp = 0x7ff3cf169640
        args = {flags = 4001536, pidfd = 140685128145168, child_tid = 140685128145168, 
          parent_tid = 140685128145168, exit_signal = 0, stack = 140685119754240, 
          stack_size = 8388096, tls = 140685128144448, set_tid = 0, set_tid_size = 0, cgroup = 0}
        ret = <optimized out>
        __PRETTY_FUNCTION__ = "create_thread"
#3  0x00007ff3d162b22b in __pthread_create_2_1 (newthread=<optimized out>, attr=<optimized out>, 
    start_routine=<optimized out>, arg=<optimized out>) at pthread_create.c:807
        stackaddr = 0x7ff3ce969000
        stacksize = <optimized out>
        iattr = 0x7ffe4b8734e8
        default_attr = {external = {
            __size = '\000' <repeats 16 times>, "|\000\000\000w\000\000\000n\000\000\000[\000\000\000\b\212\336\001\000\000\000\000\240zy\321\363\177\000\000\030\000\000\000\000\000\000", __align = 0}, 
          internal = {schedparam = {sched_priority = 0}, schedpolicy = 0, flags = 0, 
            guardsize = 511101108348, stackaddr = 0x5b0000006e, stacksize = 31361544, 
            extension = 0x7ff3d1797aa0 <main_arena>, unused = 0x18}}
        destroy_default_attr = <optimized out>
        c11 = <optimized out>
        pd = 0x7ff3cf169640
        err = 0
        retval = 0
        self = <optimized out>
        stopped_start = false
        thread_ran = false
        original_sigmask = {__val = {0, 6442450944, 1685135727236732171, 140685166749634, 
            8314019215609590644, 1767987054, 24, 140730165572736, 31344416, 140685166746220, 0, 1, 48, 
            7, 40, 662481388679193335}}
        __PRETTY_FUNCTION__ = "__pthread_create_2_1"
#4  0x00007ff3d4603ab5 in ?? ()
   from /home/cpoul/Android/Sdk/emulator/lib64/qt/lib/libQt5WebEngineCoreAndroidEmu.so.5
No symbol table info available.
#5  0x00007ff3d45d1945 in ?? ()
   from /home/cpoul/Android/Sdk/emulator/lib64/qt/lib/libQt5WebEngineCoreAndroidEmu.so.5
--Type <RET> for more, q to quit, c to continue without paging--
No symbol table info available.
#6  0x00007ff3d45c1bef in ?? ()
   from /home/cpoul/Android/Sdk/emulator/lib64/qt/lib/libQt5WebEngineCoreAndroidEmu.so.5
No symbol table info available.
#7  0x00007ff3d566794d in ?? ()
   from /home/cpoul/Android/Sdk/emulator/lib64/qt/lib/libQt5WebEngineCoreAndroidEmu.so.5
No symbol table info available.
#8  0x00007ff3d67cf8e5 in ?? ()
   from /home/cpoul/Android/Sdk/emulator/lib64/qt/lib/libQt5WebEngineCoreAndroidEmu.so.5
No symbol table info available.
#9  0x00007ff3d67cfe82 in ?? ()
   from /home/cpoul/Android/Sdk/emulator/lib64/qt/lib/libQt5WebEngineCoreAndroidEmu.so.5
No symbol table info available.
#10 0x00007ff3d67fc21f in ?? ()
   from /home/cpoul/Android/Sdk/emulator/lib64/qt/lib/libQt5WebEngineCoreAndroidEmu.so.5
No symbol table info available.
#11 0x00007ff3d453193a in ?? ()
   from /home/cpoul/Android/Sdk/emulator/lib64/qt/lib/libQt5WebEngineCoreAndroidEmu.so.5
No symbol table info available.
#12 0x00007ff3d4532c29 in ?? ()
   from /home/cpoul/Android/Sdk/emulator/lib64/qt/lib/libQt5WebEngineCoreAndroidEmu.so.5
No symbol table info available.
#13 0x00007ff3d5649259 in ?? ()
   from /home/cpoul/Android/Sdk/emulator/lib64/qt/lib/libQt5WebEngineCoreAndroidEmu.so.5
No symbol table info available.
#14 0x00007ff3d4530e71 in ?? ()
   from /home/cpoul/Android/Sdk/emulator/lib64/qt/lib/libQt5WebEngineCoreAndroidEmu.so.5
No symbol table info available.
#15 0x00007ff3d2c40ffd in QtWebEngine::processMain(int, char const**) ()
   from /home/cpoul/Android/Sdk/emulator/lib64/qt/lib/libQt5WebEngineCoreAndroidEmu.so.5
No symbol table info available.
#16 0x0000000000400d8b in ?? ()
No symbol table info available.
#17 0x00007ff3d15ca560 in __libc_start_call_main (main=main@entry=0x400ce0, argc=argc@entry=4, 
    argv=argv@entry=0x7ffe4b874378) at ../sysdeps/nptl/libc_start_call_main.h:58
        self = <optimized out>
        result = <optimized out>
        unwind_buf = {cancel_jmp_buf = {{jmp_buf = {0, -700714002195772708, 140730165576568, 4197600, 
                140685308275712, 4197856, 700880789588576988, 693891800676076252}, 
              mask_was_saved = 0}}, priv = {pad = {0x0, 0x0, 0x7ffe4b874378, 0x400ce0}, data = {
              prev = 0x0, cleanup = 0x0, canceltype = 1267155832}}}
        not_first_call = <optimized out>
#18 0x00007ff3d15ca60c in __libc_start_main_impl (main=0x400ce0, argc=4, argv=0x7ffe4b874378, 
    init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7ffe4b874368)
    at ../csu/libc-start.c:409
No locals.
#19 0x0000000000400bb9 in ?? ()
No symbol table info available.
Edited Nov 03, 2021 by Charalampos Poulikidis
Assignee
Assign to
Time tracking